# estaty_examples

./: README.md  pyproject.toml
release_01/proximity_habr/: path_to_bars.py  path_to_parks.py  path_to_parks_with_quercus.py  path_to_schools.py
release_01/proximity_tds/: path_to_bars.py  path_to_parks.py  path_to_parks_with_quercus.py  path_to_schools.py
